unpackaged/main/default/objects/RequiredProductBySalesPurpose__c/RequiredProductBySalesPurpose__c.object-meta.xml
<CustomObject>
    <label>Required Product by Sales Purpose</label>
    <nameField>
        <displayFormat>RPSP-{0000000}</displayFormat>
        <label>Required Product by Sales Purpose Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Required Products by Sales Purpose</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>