unpackaged/main/default/objects/RequiredProductBySalesPurpose__c/fields/externalId__c.field-meta.xml
<CustomField>
    <fullName>externalId__c</fullName>
    <externalId>true</externalId>
    <label>externalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>