unpackaged/main/default/objects/RequiredProductBySalesPurpose__c/fields/ParentProduct__c.field-meta.xml
<CustomField>
    <fullName>ParentProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Required Products by Sales Purpose</relationshipLabel>
    <relationshipName>Required_Products_by_Sales_Purpose</relationshipName>
    <type>Lookup</type>
</CustomField>