unpackaged/main/default/objects/RequiredProductBySalesPurpose__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Required Products by Sales Purpose (Product)</relationshipLabel>
    <relationshipName>Required_Products_by_Sales_Purpose1</relationshipName>
    <type>Lookup</type>
</CustomField>