unpackaged/main/default/objects/RequiredProductBySalesPurpose__c/fields/ProductOption__c.field-meta.xml
<CustomField>
    <fullName>ProductOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductOption</label>
    <referenceTo>SBQQ__ProductOption__c</referenceTo>
    <relationshipLabel>Required Products by Sales Purpose</relationshipLabel>
    <relationshipName>Required_Products_by_Sales_Purpose</relationshipName>
    <type>Lookup</type>
</CustomField>