unpackaged/main/default/objects/RequiredProductBySalesPurpose__c/fields/SalesPurpose__c.field-meta.xml
<CustomField>
    <fullName>SalesPurpose__c</fullName>
    <label>Sales Purpose</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Purpose</valueSetName>
    </valueSet>
</CustomField>